
            Each property allows you to specify a comma separated list
            of regular expressions. A window whose title or class
            matches a specified expression will be decorated appropriately. 
            Note: these hints only affect NEW windows. Do not forget to 
            call "kwmcom configure" or to restart kwm after you changed the
            kwmrc file.

patchlevel 6:
        - horizontal shading (blending) a la kpixmap
        - fixed motif decoration hint handling. Useful for the fullscreen view
           of the acrobat reader.
 
patchlevel 5:
        - no more harecoded "Helvetica" font. kwm uses the generalFont instead.
        - two new focus policies: CLASSIC_FOCUS_FOLLOWS_MOUSE and
           CLASSIC_SLOPPY_FOCUS. Both break the fancy Alt-Tab feature as well as
           the "switch-to"-function in the taskmanager/taskbar. Anyway, old hand twm
           fans seems unable to live without _true_ focus follows mouse :-) 
        - changed autoraise semantics: autoraise only works when the pointer is 
           inside the window. Just having the focus is no longer sufficient.
        - fixed manual placement in combination with electricBorders. Did I already
           mention that I hate all these options....grrr.........
        - ElectricBorderMovePointer is obsolete and no longer supported. Instead there
           is a new option: ElectricBorderPointerWarp=NoWarp,MiddleWarp,FullWarp
        - some improvements for reparenting

patchlevel 4:
        - raised the number of possible virtual desktops to 32. Note that you need
           a current libkdecore to take the full benefit from this.
        - electric borders need to be "pushed" if you want to switch to another virtual 
           desktop without dragging a window. The number of pushes within the
           timeframe given by the ElectricBorder property is defined in the new property
           ElectricBorderNumberOfPushes. The default is 5.